[project]
name = "juptest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autoviz>=0.1.905",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "plotly>=5.0.0",
    "nbformat>=4.2.0",
    "streamlit>=1.28.0",
    "geopandas>=0.14.0",
    "matplotlib>=3.8.0",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipython>=8.0.0",
    "uv>=0.9.9",
]
